cmake_minimum_required(VERSION 3.16)

project(HeaderOnlyDate LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(HeaderOnlyDate date.h main.cpp)

include(GNUInstallDirs)
install(TARGETS HeaderOnlyDate
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
